Latest Commit 29 Oct 2023

--- a/E_Chikitsa_Api/E_Chikitsa_Api/appsettings.json
+++ b/E_Chikitsa_Api/E_Chikitsa_Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "E_ChikitsaDbConnStr": "Server=tcp:kvsinfosoftvnsserver.database.windows.net,1433;Initial Catalog=E_ChikitsaDb;Persist Security Info=False;User ID=E_ChikitsaDb;Password=kvs@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "E_ChikitsaDbConnStr": "Server=tcp:kvsinfosoftvnsserver.database.windows.net,1433;Initial Catalog=E_ChikitsaAPIDb;Persist Security Info=False;User ID=E_ChikitsaDb;Password=kvs@123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "E_ChikitsaDbConnStrlocal": "Server=RAHUL2893;Initial Catalog=DataEChikitsa;Trusted_Connection=True;TrustServerCertificate=True;Connection Timeout=30;"
   }
 }
