--- a/E_Chikitsa_Api/E_Chikitsa_Api/E_Chikitsa_Api.csproj
+++ b/E_Chikitsa_Api/E_Chikitsa_Api/E_Chikitsa_Api.csproj
@@ -26,7 +26,7 @@
 
   <ItemGroup>
     <Reference Include="CypherUtility">
-      <HintPath>..\..\CypherUtility\bin\Debug\CypherUtility.dll</HintPath>
+      <HintPath>..\E_Chikitsa_Utility\UtilityTools\CypherUtility.dll</HintPath>
     </Reference>
   </ItemGroup>
 
